2007-07-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* default.build: Fix relative path to key. Avoid use of ugly foreach
	contruct. Spaces to tabs.
	* Mono.Cecil.csproj: Fix relative path to key.
	* standalone.make: Fix relative path to key and config.make.

2007-07-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Expose a way to add default directories
		where the assemblies are first looked for.

2007-06-20  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/IReferenceImporter.cs => IImporter.cs
	  Mono.Cecil/DefaultReferenceImporter.cs => DefaultImporter.cs

	* Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/DefaultReferenceImporter.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Move Cecil types import logic into
		the DefaultReferenceImporter.

		Needed by the merger and the extractor.

2007-06-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Avoid invalid cast by properly simplifying
		instructions.

	* Mono.Cecil.Cil/OpCodes.cs:
	  CodeGen/cecil.xml:
		leave.s is a macro instruction.

	* Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/ParameterDefinition.cs:
		Fix cloning.

2007-06-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs:
		Fix custom mods for fields ref.

2007-06-13  Jb Evain  <jbevain@novell.com>

	Integrated patches by:
	Paul Apostolescu <papostolescu@fortifysoftware.com>

	* patch3:
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		In named args, objects are encoded as boxed.

	* patch1:
	  Mono.Cecil/IMemberDefinition.cs
	  Mono.Cecil/Constants.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs:
		Do not take into account special _Deleted
		members.

	* patch6:
	  Mono.Cecil/StructureReader.cs:
		Read the flags of the references as well.

	* patch5:
	  Mono.Cecil.Metadata/UserStringsHeap.cs:
		Don't bother getting a string from the bytes
		if the length is < 2 (0, or 0 + an encoding flag)

	* patch4: