@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Feb 22 14:39:38 CET 2007
+// Tue Jul 17 00:22:32 +0200 2007
 //
 // (C) 2005 Jb Evain
 //
@@ -31,6 +31,8 @@
 
 namespace Mono.Cecil.Metadata {
 
+	using System;
+	using System.Collections;
 	using System.IO;
 
 	class MetadataTableReader : BaseMetadataTableVisitor {
