@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Mar 20 16:02:16 +0100 2007
+// Tue Jul 17 00:22:33 +0200 2007
 //
 // (C) 2005 Jb Evain
 //
@@ -92,7 +92,7 @@ namespace Mono.Cecil.Metadata {
 				case 2 :
 					return new MetadataToken (TokenType.TypeSpec, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for TypeDefOrRef");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.HasConstant :
 				rid = data >> 2;
@@ -104,7 +104,7 @@ namespace Mono.Cecil.Metadata {
 				case 2 :
 					return new MetadataToken (TokenType.Property, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for HasConstant");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.HasCustomAttribute :
 				rid = data >> 5;
@@ -150,7 +150,7 @@ namespace Mono.Cecil.Metadata {
 				case 19 :
 					return new MetadataToken (TokenType.GenericParam, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for HasCustomAttribute");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.HasFieldMarshal :
 				rid = data >> 1;
@@ -160,7 +160,7 @@ namespace Mono.Cecil.Metadata {
 				case 1 :
 					return new MetadataToken (TokenType.Param, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for HasFieldMarshal");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.HasDeclSecurity :
 				rid = data >> 2;
@@ -172,7 +172,7 @@ namespace Mono.Cecil.Metadata {
 				case 2 :
 					return new MetadataToken (TokenType.Assembly, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for HasDeclSecurity");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.MemberRefParent :
 				rid = data >> 3;
@@ -188,7 +188,7 @@ namespace Mono.Cecil.Metadata {
 				case 4 :
 					return new MetadataToken (TokenType.TypeSpec, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for MemberRefParent");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.HasSemantics :
 				rid = data >> 1;
@@ -198,7 +198,7 @@ namespace Mono.Cecil.Metadata {
 				case 1 :
 					return new MetadataToken (TokenType.Property, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for HasSemantics");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.MethodDefOrRef :
 				rid = data >> 1;
@@ -208,7 +208,7 @@ namespace Mono.Cecil.Metadata {
 				case 1 :
 					return new MetadataToken (TokenType.MemberRef, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for MethodDefOrRef");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.MemberForwarded :
 				rid = data >> 1;
@@ -218,7 +218,7 @@ namespace Mono.Cecil.Metadata {
 				case 1 :
 					return new MetadataToken (TokenType.Method, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for MemberForwarded");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.Implementation :
 				rid = data >> 2;
@@ -230,7 +230,7 @@ namespace Mono.Cecil.Metadata {
 				case 2 :
 					return new MetadataToken (TokenType.ExportedType, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for Implementation");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.CustomAttributeType :
 				rid = data >> 3;
@@ -240,7 +240,7 @@ namespace Mono.Cecil.Metadata {
 				case 3 :
 					return new MetadataToken (TokenType.MemberRef, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for CustomAttributeType");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.ResolutionScope :
 				rid = data >> 2;
@@ -254,7 +254,7 @@ namespace Mono.Cecil.Metadata {
 				case 3 :
 					return new MetadataToken (TokenType.TypeRef, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for ResolutionScope");
+					return MetadataToken.Zero;
 				}
 			case CodedIndex.TypeOrMethodDef :
 				rid = data >> 1;
@@ -264,10 +264,10 @@ namespace Mono.Cecil.Metadata {
 				case 1 :
 					return new MetadataToken (TokenType.Method, rid);
 				default :
-					throw new MetadataFormatException("Non valid tag for TypeOrMethodDef");
+					return MetadataToken.Zero;
 				}
 			default :
-				throw new MetadataFormatException ("Non valid CodedIndex");
+				return MetadataToken.Zero;
 			}
 		}
 
